2008-08-21  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config: add hamster-applet, remove
	gtksourceview-1.0, add limit for epiphany & metacity (they have
	branched already)

	* smoketesting/sample-tarball.jhbuildrc:
	* versions: update for 2.23.90

2008-08-06  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config: add empathy (project-hamster
	will be added later: it's not in jhbuild yet)
	* smoketesting/sample-tarball.jhbuildrc:
	* versions: update for 2.23.6

2008-08-05  Vincent Untz  <vuntz@gnome.org>

	* install-module: improve RSS output, by using CDATA, adding a guid tag
	and a atom:link tag.
	Patch by Patryk Zawadzki <patrys@pld-linux.org>

2008-07-23  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config: add pangomm, remove the limit
	for epiphany since the 2.24 version doesn't use webkit yet.
	* smoketesting/sample-tarball.jhbuildrc:
	* versions: update for 2.23.5

2008-07-22  Sven Herzberg  <sven@imendio.com>

	Added Changelist support for svn.
	Patch by Maurice van der Pot <griffon26@kfk4ever.com>.

	* tools/prepare-ChangeLog.pl: checngelist support and --help output

2008-07-06  Kjartan Maraas  <kmaraas@gnome.org>

	* smoketesting/sample-tarball-stable.jhbuildrc:
	* versions-stable:
	Update for 2.22.3.

2008-06-19  Vincent Untz  <vuntz@gnome.org>

	* schedule/automail.py: revert accidental commit from Frederic

2008-06-18  Frederic Crozat  <fcrozat@mandriva.com>

	* smoketesting/sample-tarball.jhbuildrc:
	* versions: update for 2.23.4

2008-06-04  Vincent Untz  <vuntz@gnome.org>

	* versions: update for vte and gnome-terminal

2008-06-04  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/sample-tarball.jhbuildrc:
	* versions: update for 2.23.3

2008-05-14  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/sample-tarball.jhbuildrc:
	* versions: update for 2.23.2

2008-04-23  Vincent Untz  <vuntz@gnome.org>

	* versions: fix perl bindings versions
